.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ATC_Co_op__c</fullName>
        <description>ATC Custom Field for Core Four</description>
        <inlineHelpText>Co-op details:  (brands, current co-op dollars, overall spending across channels)</inlineHelpText>
        <label>ATC Co-op</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ATC_Collection_Status__c</fullName>
        <description>ATC</description>
        <label>ATC Collection Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hibernation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Core_Four_Last_Updated_By__c</fullName>
        <inlineHelpText>Indicates last person that updated one of the Core Four fields</inlineHelpText>
        <label>Core Four Last Updated By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Core_Four_Last_Updated_Date__c</fullName>
        <description>ATC Custom Field for Core Four - Used to store the date when any of the core four description fields are updated.</description>
        <inlineHelpText>This date shows the last time one of the core four fields has been updated.</inlineHelpText>
        <label>Core Four Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATC_Current_Advertising__c</fullName>
        <description>ATC Custom Field - Core Four</description>
        <inlineHelpText>Advertising Budget, Advertising Strategy, Upcoming Events…What’s ATC’s competition?</inlineHelpText>
        <label>ATC Current Advertising</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ATC_Current_Dealership_Processes__c</fullName>
        <description>ATC Custom Field for the Core Four</description>
        <inlineHelpText>Consider Pricing Strategy, Inventory Strategy, Co-op, Reconditioning Process, etc.</inlineHelpText>
        <label>ATC Current Dealership Processes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ATC_Dealer_Expectations__c</fullName>
        <description>ATC Custom field for Core Four</description>
        <inlineHelpText>What are the expectations for the Dealership in regards to AutoTrader.com?  What&apos;s their expectations for the Advertising Consultant?</inlineHelpText>
        <label>ATC Dealer Expectations</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ATC_Dealer_Id__c</fullName>
        <description>External ID used to identify the account&apos;s ATC Dealer ID.</description>
        <externalId>true</externalId>
        <label>ATC Dealer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Dealer_Profile__c</fullName>
        <description>Custom Link to ATC Fastlane website</description>
        <formula>HYPERLINK(&quot;https://fastlane.autotrader.com/freedom/dealer-profile/report.seam?dealerIdparam=&quot;&amp; SVOC_Id__c &amp;&quot;&amp;activeNav=DEALER_PROFILE&amp;cid=2130&quot;,&quot;Open Dealer Profile in Fastlane&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open this Account in ATC Fastlane.</inlineHelpText>
        <label>ATC Dealer Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Dealer_Site__c</fullName>
        <description>ATC Custom Link to Dealer Site Admin page</description>
        <formula>HYPERLINK(&quot;https://dealers-admin.autotrader.com/admin/admanagercontroller.jsp?action=changedealer&amp;dealership_id=&quot;&amp; SVOC_Id__c ,&quot;Open Account in Dealer Site&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click this link to access this Account in the ATC Dealer Site.</inlineHelpText>
        <label>ATC Dealer Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Dynamics_Acct_GUID_Id__c</fullName>
        <description>CRM Dynamics GUID Id used for Dynamic Account Links from to view the CRM Dynamics Account from  Salesforce to CRM Dynamics.</description>
        <externalId>true</externalId>
        <label>ATC Dynamics Acct GUID Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ATC_Flair__c</fullName>
        <description>Formula used to display flair image for BU as Active, Former, or Prospect.</description>
        <formula>CASE( ATC_Status__c , 
&quot;Active&quot;, IMAGE(&quot;/resource/Flair_Logos/AutoTrader_Active.png&quot;, &quot;ATC Active&quot;), 
&quot;Former&quot;, IMAGE(&quot;/resource/Flair_Logos/AutoTrader_Former.png&quot;, &quot;ATC Former&quot;), 
&quot;Prospect&quot;,IMAGE(&quot;/resource/Flair_Logos/AutoTrader_Prospect.png&quot;, &quot;ATC Prospect&quot;), 
&quot;/s.gif&quot; 
)</formula>
        <label>ATC Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Goals_Objectives__c</fullName>
        <description>ATC Core Four</description>
        <inlineHelpText>The Sales Person should enter the short &amp; long term goals of the Dealership here.</inlineHelpText>
        <label>ATC Goals &amp; Objectives</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ATC_Product_Type__c</fullName>
        <description>Picklist used to identify what type of ATC Product the account has purchased.</description>
        <label>ATC Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>No ATC Products</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trans Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Sales_Alert_Last_Modified_By__c</fullName>
        <label>ATC Sales Alert Last Modified By</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Sales_Alert_Last_Modified__c</fullName>
        <label>ATC Sales Alert Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATC_Sales_Alert_Message__c</fullName>
        <description>High Visiblity ATC Alert message to be displayed to the ATC Sales team</description>
        <label>ATC Sales Alert Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Security_Question__c</fullName>
        <label>ATC Security Question</label>
        <picklist>
            <picklistValues>
                <fullName>Name a fictional hero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name a type of mammal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name an international city</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name an exotic color</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Security_Response__c</fullName>
        <label>ATC Security Response</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Service_Alert_Last_Modified_By__c</fullName>
        <label>ATC Service Alert Last Modified By:</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Service_Alert_Last_Modified__c</fullName>
        <label>ATC Service Alert Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATC_Service_Alert_Message__c</fullName>
        <description>High Visiblity ATC Alert message to be displayed to the Customer Operations team</description>
        <label>ATC Service Alert Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATC_Spend__c</fullName>
        <description>System calculated field - looks at the ATG Product library and totals the product spend based on the BU name and product status.</description>
        <inlineHelpText>System calculated field - looks at the ATG Product library and totals the product spend based on the BU name and product status.</inlineHelpText>
        <label>ATC Spend</label>
        <summarizedField>ATG_Product__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>ATG_Product__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>ATC</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ATG_Product__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active, Delivered, Pending Cancellation, Pending Cancellation with Restriction</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ATG_Product__c.Spend__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ATG_Product__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ATC_Status__c</fullName>
        <description>Field is updated by the system based on the product status in the ATG Product library.</description>
        <inlineHelpText>Field is updated by the system based on the product status in the ATG Product library.</inlineHelpText>
        <label>ATC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATC_Total_Product_Count__c</fullName>
        <description>Calculates the number of active ATC products.</description>
        <label>ATC Total Product Count</label>
        <summarizedField>ATG_Product__c.Product_Status_Value__c</summarizedField>
        <summaryFilterItems>
            <field>ATG_Product__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>ATC</value>
        </summaryFilterItems>
        <summaryForeignKey>ATG_Product__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ATC_Visit_Expectations__c</fullName>
        <description>ATC Core Four</description>
        <label>ATC Visit Expectations</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Two Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Two Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATG_Pending_Cancellation__c</fullName>
        <description>FIELD TO CAPTURE ATG Pending Cancellation</description>
        <label>ATG Pending Cancellation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <description>Utility field to count the number of accounts when reporting on other objects associated to the account (i.e. ATG products). It helps answer the question how many accounts have atg products associated to them.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager__c</fullName>
        <description>ATC.Formula field that reads the account owner&apos;s manager for reporting.</description>
        <formula>Owner.Manager.FirstName &amp; &quot; &quot; &amp; Owner.Manager.LastName</formula>
        <inlineHelpText>Formula field that reads the account owner&apos;s manager for reporting.</inlineHelpText>
        <label>Account Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_ATC_Dealer__c</fullName>
        <description>Used for reporting active dealer count by BU. IF( ATC_Total_Product_Count__c  &gt; 0, 1, 0)</description>
        <formula>IF( ATC_Total_Product_Count__c  &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for reporting active dealer count by BU.</inlineHelpText>
        <label>Active ATC Dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_HomeNet_Dealer__c</fullName>
        <description>Used for reporting active dealer count by BU. IF( HomeNet_Total_Product_Count__c  &gt; 0, 1, 0)</description>
        <formula>IF( HomeNet_Total_Product_Count__c  &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for reporting active dealer count by BU.</inlineHelpText>
        <label>Active HomeNet Dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_KBB_Dealer__c</fullName>
        <description>Used for reporting active dealer count by BU. IF( KBB_Total_Product_Count__c  &gt; 0, 1, 0)</description>
        <formula>IF( KBB_Total_Product_Count__c  &gt; 0, 1, 0)</formula>
        <inlineHelpText>Used for reporting active dealer count by BU.</inlineHelpText>
        <label>Active KBB Dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_TIM_Dealer__c</fullName>
        <description>Used for reporting active dealer count by BU. IF( TIM_Total_Product_Count__c  &gt; 0, 1, 0)</description>
        <formula>IF( TIM_Total_Product_Count__c  &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for reporting active dealer count by BU.</inlineHelpText>
        <label>Active TIM Dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Vin_Dealer__c</fullName>
        <description>Used for reporting active dealer count by BU. IF( Vin_Total_Product_Count__c  &gt; 0, 1, 0)</description>
        <formula>IF( Vin_Total_Product_Count__c  &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for reporting active dealer count by BU.</inlineHelpText>
        <label>Active Vin Dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_vAuto_Dealer__c</fullName>
        <description>Used for reporting active dealer count by BU. IF( vAuto_Total_Product_Count__c  &gt; 0, 1, 0)</description>
        <formula>IF( vAuto_Total_Product_Count__c  &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for reporting active dealer count by BU.</inlineHelpText>
        <label>Active vAuto Dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adwords_CID__c</fullName>
        <description>Haystak</description>
        <label>Adwords CID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_Conversion_ID__c</fullName>
        <description>Haystak</description>
        <label>Adwords Conversion ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_Conversion_Label__c</fullName>
        <description>Haystak</description>
        <label>Adwords Conversion Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>haystack field</description>
        <label>Alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Index__c</fullName>
        <label>Assignment Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Attention_To__c</fullName>
        <inlineHelpText>Enter the name of the person who is in charge of billing at the dealership.</inlineHelpText>
        <label>Bill to Attention To</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <formula>Total_Media_Spend__c + TIM_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Size__c</fullName>
        <label>Business Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Created for Haystak</description>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Onboarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buy_Here_Pay_Here_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ATC.Checkbox used to identify whether this is a Buy Here/Pay Here account.</description>
        <label>Buy Here/Pay Here Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Contract_End_Date__c</fullName>
        <description>Manually updated field to determine the account&apos;s CRM contract end date.</description>
        <label>CRM Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <description>ATC.Picklist to determine which CRM the account is using, if any.</description>
        <label>CRM</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona/Dealertrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoAccelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Doone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFM/Auto Accelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Dealer Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contact Manager - Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer/Mate (Div of Auto/Mate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Mine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Peak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Socket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Biz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEX CRM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cities_in_GEO__c</fullName>
        <description>Haystak</description>
        <label>Cities in GEO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_UA_Code__c</fullName>
        <description>Haystak</description>
        <label>Client UA Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>haystack field</description>
        <label>Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_AC__c</fullName>
        <description>Placeholder for data from Book of Business file.</description>
        <label>Current AC</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Using_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>haystack field</description>
        <label>Currently Using Analytics?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currently_Using_PPC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>haystack field</description>
        <label>Currently Using PPC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>Used to Map Lead field of Business Type and Push into [Account] Type via workflow</description>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEMAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Car Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_System__c</fullName>
        <description>Picklist to determine which DMS the account is using, if any.</description>
        <label>DMS System</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP3PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AST (Auto Search Tech)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Mate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Biz MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>carsforsale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarThink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerTrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEI Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frazer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genisys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grapevine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti.net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovative Dealer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jarvis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightyear</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSC_Flair__c</fullName>
        <description>Formula used to display flair image for DSC accounts.</description>
        <formula>IMAGE(&quot;https://c.na9.content.force.com/servlet/servlet.ImageServer?id=015E0000001F4q1&amp;oid=00Dc0000003sc66&amp;lastMod=1349820566000&quot;, &quot;DSC&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSC Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <description>Formula used to calculate the quality of the account&apos;s data based on all lead details captured or missing.</description>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL(CRM__c,&quot;&quot;), &quot;CRM, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(DMS_System__c,&quot;&quot;), &quot;DMS, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(ILM__c,&quot;&quot;), &quot;ILM, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(OnTheLot__c,&quot;&quot;), &quot;OTL, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Website__c,&quot;&quot;), &quot;Website, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( PricingTool__c ,&quot;&quot;), &quot;Pricing Tool, &quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <description>Formula used to calculate the quality score of the account&apos;s data based on all lead details captured or missing.</description>
        <formula>IF( ISPICKVAL( CRM__c ,&quot;&quot;), 0,20) + IF( ISPICKVAL( DMS_System__c ,&quot;&quot;), 0,20) + IF( ISPICKVAL( ILM__c ,&quot;&quot;), 0,20) + IF( ISPICKVAL( OnTheLot__c ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Website__c ,&quot;&quot;), 0,15) + IF( ISPICKVAL( PricingTool__c ,&quot;&quot;), 0,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_SVOC_Field_Updated__c</fullName>
        <description>This field is updated by a workflow rule when the SVOC Master Id field is populated.  It is used by the &quot;My Accounts-Account ID Assigned &lt; 7 Days&quot; list view.</description>
        <label>Date SVOC Field Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_In_Person__c</fullName>
        <description>field to capture the number of days since the Last In Person Visit</description>
        <formula>TODAY() -  Last_In_Person__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last In Person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>